--- a/package.json
+++ b/package.json
@@ -1,14 +1,30 @@
 {
   "name": "chunkosaur",
   "version": "1.0.0",
-  "main": "index.js",
   "directories": {
     "test": "test"
   },
+  "main": "index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"See repo for test folder\" && exit 1",
+    "format": "prettier --write .",
+    "check-format": "prettier --check .",
+    "ci": "npm run check-format"
   },
-  "author": "Bruce Mcpherson",
-  "license": "ISC",
-  "description": "chunkosaur"
+  "homepage": "https://ramblings.mcpher.com/paging-large-data-sets-and-how-to-make-apps-script-understand-generators/",
+  "author": "Bruce Mcpherson <bruce@mcpher.com> (https://mcpher.com)",
+  "license": "MIT",
+  "description": "chunkosaur - a chunking and bulking generator",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brucemcpherson/chunkosaur.git"
+  },
+  "type": "module",
+  "files": [
+    "src"
+  ],
+  "devDependencies": {
+    "@arethetypeswrong/cli": "^0.16.4",
+    "prettier": "^3.3.3"
+  }
 }
