--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "main": "index.mjs",
   "scripts": {
-    "test": "echo \"See repo for test folder\" && exit 1",
+    "test": "ava",
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "ci": "npm run check-format"
@@ -24,7 +24,8 @@
     "src"
   ],
   "devDependencies": {
-    "@arethetypeswrong/cli": "^0.16.4",
+    "ava": "^6.1.3",
+    "delay": "^6.0.0",
     "prettier": "^3.3.3"
   }
 }
